syntax = "proto3";

package proto;

option go_package = "github.com/Iksolot21/serverless-task-management/proto";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    string message = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}
message ValidateTokenRequest {
    string token = 1;
}
message ValidateTokenResponse {
    bool isValid = 1;
    int32 userId = 2;
}